// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateEventLink all day event generates Google link 1`] = `"https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20200502%2F20200505&text=Birthday%20party"`;

exports[`generateEventLink all day event generates ICS string 1`] = `
"BEGIN:VCALENDAR
VERSION:2.0
BEGIN:VEVENT
DTSTART:20200502
DTEND:20200505
SUMMARY:Birthday party
END:VEVENT
END:VCALENDAR
"
`;

exports[`generateEventLink non-all day event generates Google link 1`] = `"https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20201220T003000Z%2F20201221T000000Z&location=Politick%C3%BDch%20v%C4%9Bz%C5%88%C5%AF%201511%2F5&text=New%20year%20party"`;

exports[`generateEventLink non-all day event generates ICS string 1`] = `
"BEGIN:VCALENDAR
VERSION:2.0
BEGIN:VEVENT
DTSTART:20201220T003000Z
DTEND:20201221T000000Z
SUMMARY:New year party
LOCATION:Politických vězňů 1511/5
END:VEVENT
END:VCALENDAR
"
`;
